"Updated Login component to use useLogin hook, changed navbar logo text, removed auth index page, updated dashboard page layout and styles, and modified API base URL."

--- a/src/pages/dashboard/dashboardPage.css
+++ b/src/pages/dashboard/dashboardPage.css
@@ -1,8 +1,11 @@
-
-
 .dashboard-container {
     width: 100%;
     height: 100vh;
+}
+
+.dashboard-content-container {
+    display: flex;
+    height: 100%;
 }
 
 .nav-container {
@@ -20,7 +23,7 @@
 .sidebar-container {
     position: absolute;
     height: calc(100vh - 50px);
-    top:50px;
+    top: 50px;
     bottom: 0;
     left: 0;
     width: 200px;
@@ -52,7 +55,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    
+
 }
 
 .sidebar-title {
@@ -71,12 +74,12 @@
 }
 
 .sidebar-list-item {
-   display: flex;
-   width: 100%;
-   margin-top: 10px;
-   justify-content: space-between;
-   align-items: center;
-   color: #9b9797;
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: center;
+    color: #9b9797;
 }
 
 .sidebar-list-username {
@@ -114,7 +117,8 @@
 .channels-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 10px; /* Space between grid items */
+    gap: 10px;
+    /* Space between grid items */
     width: 100%;
 }
 
@@ -214,7 +218,7 @@
     background-color: black;
 }
 
-.channel-description-container { 
+.channel-description-container {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -271,7 +275,7 @@
 .chat-messages-container {
     flex-grow: 1;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .chat-messages-message {
@@ -324,7 +328,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  }
+}
 
 .spinner {
     border: 4px solid rgba(0, 0, 0, 0.3);
@@ -336,6 +340,11 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
